--- a/HostedLogger/WebAPILogProcessor/WebAPILogProcessor.csproj
+++ b/HostedLogger/WebAPILogProcessor/WebAPILogProcessor.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F4A32D9E-FD46-44F4-9B2B-BA63CBF5686E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>APILogSender</RootNamespace>
-    <AssemblyName>APILogSender</AssemblyName>
+    <RootNamespace>WebAPILogProcessor</RootNamespace>
+    <AssemblyName>WebAPILogProcessor</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,12 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LogEntry.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebAPILogProcessor.cs" />
   </ItemGroup>
@@ -54,9 +49,6 @@
       <Project>{e1fdae73-f04b-4176-9c40-9a90e2fc431d}</Project>
       <Name>LogProcessor</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
