--- a/LoggAPI/LoggerAPI/bin/LoggerAPI.dll.config
+++ b/LoggAPI/LoggerAPI/bin/LoggerAPI.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-LoggerAPI-20170928032655.mdf;Initial Catalog=aspnet-LoggerAPI-20170928032655;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="LoggingEntities" connectionString="metadata=res://*/Database.Logging.csdl|res://*/Database.Logging.ssdl|res://*/Database.Logging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JOSHI-PC\SQLSERVERPV;initial catalog=Logging;user id=sa;password=W3lc0m3;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-LoggerAPI-20170928032655.mdf;Initial Catalog=aspnet-LoggerAPI-20170928032655;Integrated Security=True;User Instance=True"
+      providerName="System.Data.SqlClient" />
+    <add name="LoggingEntities" connectionString="metadata=res://*/Database.Logging.csdl|res://*/Database.Logging.ssdl|res://*/Database.Logging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JOSHI-PC\SQLSERVERPV;initial catalog=Logging;user id=sa;password=W3lc0m3;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
