--- a/HostedLogger/LogTest/App.config
+++ b/HostedLogger/LogTest/App.config
@@ -7,7 +7,8 @@
   <add key="ClientId" value="3"/>
 <add key="ApplicationId" value="3"/>
 <add key="LogFilePath" value="C:\HostedLogs"/>
-<add key="APIURL" value="http://10.31.24.53/LoggerAPI/api/LogEntries"/>
+<!--<add key="APIURL" value="http://10.31.24.53/LoggerAPI/api/LogEntries"/>-->
+  <add key="APIURL" value="http://localhost/LoggerAPI/api/LogEntries"/>
   <add key="WebAPILogType" value="Info,Warning,Error"/>
 <add key="" value=""/>
 </appSettings>
